test/modules/bradc/userInsteadOfStandard/foo2.chpl
use Math;

writeln("In my foo2");
